--- a/documentation/source/_static/cheatsheet.html
+++ b/documentation/source/_static/cheatsheet.html
@@ -3,15 +3,26 @@
 <head>
   <title>Nimble Cheatsheet</title>
   <link rel="stylesheet" href="cheatsheet.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      $(".axis").mouseenter(function(){
+        $(this).parent().children(".method").css('text-decoration', 'underline')
+      });
+      $(".axis").mouseleave(function(){
+        $(this).parent().children(".method").css('text-decoration', 'none')
+      });
+    });
+  </script>
 </head>
 <body>
   <div>
     <table>
       <tr>
-        <td style="vertical-align: bottom;">
+        <td class="text-bottom">
           <h1 id="title">Nimble Cheatsheet</h1>
         </td>
-        <td style="vertical-align: bottom; width: 440px; padding-left: 2px;">
+        <td class="text-bottom">
           <p id="description">Nimble is built on top of Python’s most popular
             data science and machine learning libraries to provide a single,
             easy to use, API for any data science job.
@@ -77,7 +88,7 @@
             </div>
           </div>
         </div>
-        <div style="clear: both;">
+        <div class="clear">
           <p>
             A <strong><a href="../docs/generated/nimble.core.data.Base.html">Nimble data object</a></strong>
             acts as the container of all individual elements of your data. But
@@ -244,13 +255,13 @@
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;# getter and setter</p>
             <p>X.<a href="../docs/generated/nimble.core.data.Base.absolutePath.html">absolutePath</a> # getter only</p>
             <p>X.<a href="../docs/generated/nimble.core.data.Base.relativePath.html">relativePath</a> # getter only</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.getNames.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.getNames.html">features</a>].getNames()</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.getName.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.getName.html">features</a>].getName(index)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.setNames.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.setNames.html">features</a>].setNames(assignments)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.setName.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.setName.html">features</a>].setName(oldIdentifier, newName)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.getIndex.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.getIndex.html">features</a>].getIndex(identifier)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.getIndices.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.getIndices.html">features</a>].getIndices(names)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.hasName.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.hasName.html">features</a>].hasName(name)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.getNames.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.getNames.html">features</a>].<span class="method">getNames</span>()</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.getName.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.getName.html">features</a>].<span class="method">getName</span>(index)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.setNames.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.setNames.html">features</a>].<span class="method">setNames</span>(assignments)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.setName.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.setName.html">features</a>].<span class="method">setName</span>(oldIdentifier, newName)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.getIndex.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.getIndex.html">features</a>].<span class="method">getIndex</span>(identifier)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.getIndices.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.getIndices.html">features</a>].<span class="method">getIndices</span>(names)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.hasName.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.hasName.html">features</a>].<span class="method">hasName</span>(name)</p>
           </div>
         </div>
       </div>
@@ -306,9 +317,9 @@
               groupFeature, ...)
             </p>
             <p>X.<a href="../docs/generated/nimble.core.data.Base.plotHeatMap.html">plotHeatMap</a>(...)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.plot.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.plot.html">features</a>].plot(identifiers, ...)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.plotMeans.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.plotMeans.html">features</a>].plotMeans(identifiers, ...)</p>
-            <p>X.[<a href="../docs/generated/nimble.core.data.Points.plotStatistics.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.plotStatistics.html">features</a>].plotStatistics(statistic,</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.plot.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.plot.html">features</a>].<span class="method">plot</span>(identifiers, ...)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.plotMeans.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.plotMeans.html">features</a>].<span class="method">plotMeans</span>(identifiers, ...)</p>
+            <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.plotStatistics.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.plotStatistics.html">features</a>].<span class="method">plotStatistics</span>(statistic,)</p>
             <p>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -394,11 +405,11 @@
               <p>X.<a href="../docs/generated/nimble.core.data.Base.countUniqueElements.html">countUniqueElements</a>(...)</p>
               <p>X.<a href="../docs/generated/nimble.core.data.Base.containsZero.html">containsZero</a>()</p>
               <p>X.<a href="../docs/generated/nimble.core.data.Base.report.html">report</a>()</p>
-              <p>X.[<a href="../docs/generated/nimble.core.data.Points.count.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.count.html">features</a>].count(condition)</p>
-              <p>X.[<a href="../docs/generated/nimble.core.data.Points.matching.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.matching.html">features</a>].matching(function)</p>
-              <p>X.[<a href="../docs/generated/nimble.core.data.Points.similarities.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.similarities.html">features</a>].similarities(function)</p>
-              <p>X.[<a href="../docs/generated/nimble.core.data.Points.statistics.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.statistics.html">features</a>].statistics(function, ...)</p>
-              <p>X.[<a href="../docs/generated/nimble.core.data.Points.unique.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.unique.html">features</a>].unique()</p>
+              <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.count.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.count.html">features</a>].<span class="method">count</span>(condition)</p>
+              <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.matching.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.matching.html">features</a>].<span class="method">matching</span>(function)</p>
+              <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.similarities.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.similarities.html">features</a>].<span class="method">similarities</span>(function)</p>
+              <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.statistics.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.statistics.html">features</a>].<span class="method">statistics</span>(function, ...)</p>
+              <p>X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.unique.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.unique.html">features</a>].<span class="method">unique</span>()</p>
               <p>X.<a href="../docs/generated/nimble.core.data.Features.report.html">features.report</a>(basicStatistics,</p>
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -451,7 +462,7 @@
             </div>
           </div>
           <div>
-            <div class="half" style="padding-left: 2px; margin-right: -2px;">
+            <div class="half outlined">
               <div class="subhead">
                 <h4>Query Strings</h4>
               </div>
@@ -488,7 +499,7 @@
       <div class="section-head">
         <h3>Data Manipulation</h3>
       </div>
-      <div style="text-align: center;">
+      <div class="text-center">
         <p>⇲ <strong>indicates an in-place operation that modifies the original
           data object rather than returning a copy</strong>
         </p>
@@ -561,9 +572,9 @@
         </div>
         <div class="code lower">
           <p>&nbsp;&nbsp;X.<a href="../docs/generated/nimble.core.data.Base.copy.html">copy</a>(to)</p>
-          <p>&nbsp;&nbsp;X.[<a href="../docs/generated/nimble.core.data.Points.copy.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.copy.html">features</a>].copy(toCopy, ...)</p>
-          <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.permute.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.permute.html">features</a>].permute(order)&nbsp;</p>
-          <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.sort.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.sort.html">features</a>].sort(by, ...)&nbsp;</p>
+          <p>&nbsp;&nbsp;X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.copy.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.copy.html">features</a>].<span class="method">copy</span>(toCopy, ...)</p>
+          <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.permute.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.permute.html">features</a>].<span class="method">permute</span>(order)&nbsp;)</p>
+          <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.sort.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.sort.html">features</a>].<span class="method">sort</span>(by, ...)&nbsp;)</p>
         </div>
       </div>
       <div class="left long" id='cleaning'>
@@ -580,11 +591,11 @@
             <p>⇲ X.<a href="../docs/generated/nimble.core.data.Base.transformElements.html">transformElements</a>(toTransform, ...)</p>
             <p>&nbsp;&nbsp;X.<a href="../docs/generated/nimble.core.data.Base.calculateOnElements.html">calculateOnElements</a>(toCalculate, ...)</p>
             <p>⇲ X.<a href="../docs/generated/nimble.core.data.Base.transformFeatureToIntegers.html">transformFeatureToIntegers</a>(featureToConvert)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.fillMatching.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.fillMatching.html">features</a>].fillMatching(fillWith, matchingElements, ...)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.replace.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.replace.html">features</a>].replace(data, ...)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.normalize.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.normalize.html">features</a>].normalize(function, ...)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.transform.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.transform.html">features</a>].transform(function, ...)</p>
-            <p>&nbsp;&nbsp;X.[<a href="../docs/generated/nimble.core.data.Points.calculate.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.calculate.html">features</a>].calculate(function, ...)</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.fillMatching.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.fillMatching.html">features</a>].<span class="method">fillMatching</span>(fillWith, matchingElements, ...)</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.replace.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.replace.html">features</a>].<span class="method">replace</span>(data, ...)</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.normalize.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.normalize.html">features</a>].<span class="method">normalize</span>(function, ...)</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.transform.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.transform.html">features</a>].<span class="method">transform</span>(function, ...)</p>
+            <p>&nbsp;&nbsp;X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.calculate.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.calculate.html">features</a>].<span class="method">calculate</span>(function, ...)</p>
           </div>
           <div>
             <p># replace a categorical feature with one-hot encoded features</p>
@@ -610,16 +621,14 @@
             <p>⇲ X.<a href="../docs/generated/nimble.core.data.Base.flatten.html">flatten</a>(order, ...)</p>
             <p>⇲ X.<a href="../docs/generated/nimble.core.data.Base.unflatten.html">unflatten</a>(dataDimensions, order, ...)</p>
             <p>&nbsp;&nbsp;X.<a href="../docs/generated/nimble.core.data.Base.groupByFeature.html">groupByFeature</a>(by, ...)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.append.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.append.html">features</a>].append(toAppend)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.insert.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.insert.html">features</a>].insert(insertBefore, toInsert, ...)
-              <!-- added spaces to align divider with data modification section above -->
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              </p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.extract.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.extract.html">features</a>].extract(toExtract, ...)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.delete.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.delete.html">features</a>].delete(toDelete, ...)</p>
-            <p>⇲ X.[<a href="../docs/generated/nimble.core.data.Points.retain.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.retain.html">features</a>].retain(toRetain, ...)</p>
-            <p>&nbsp;&nbsp;X.[<a href="../docs/generated/nimble.core.data.Points.mapReduce.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.mapReduce.html">features</a>].mapReduce(mapper, reducer)</p>
-            <p>&nbsp;&nbsp;X.[<a href="../docs/generated/nimble.core.data.Points.repeat.html">points</a>/<a href="../docs/generated/nimble.core.data.Features.repeat.html">features</a>].repeat(totalCopies, copyOneByOne)</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.append.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.append.html">features</a>].<span class="method">append</span>(toAppend)</p>
+            <!-- added spaces to align divider with data modification section above -->
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.insert.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.insert.html">features</a>].<span class="method">insert</span>(insertBefore, toInsert, ...)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.extract.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.extract.html">features</a>].<span class="method">extract</span>(toExtract, ...)</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.delete.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.delete.html">features</a>].<span class="method">delete</span>(toDelete, ...)</p>
+            <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.retain.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.retain.html">features</a>].<span class="method">retain</span>(toRetain, ...)</p>
+            <p>&nbsp;&nbsp;X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.mapReduce.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.mapReduce.html">features</a>].<span class="method">mapReduce</span>(mapper, reducer)</p>
+            <p>&nbsp;&nbsp;X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.repeat.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.repeat.html">features</a>].<span class="method">repeat</span>(totalCopies, copyOneByOne)</p>
           </div>
           <div>
             <p># invert the points and features of this object (inplace)</p>
