add trainAndTestSets to cheatsheet

--- a/documentation/source/_static/cheatsheet.html
+++ b/documentation/source/_static/cheatsheet.html
@@ -627,6 +627,7 @@
             <p>⇲ X.<a href="../docs/generated/nimble.core.data.Base.flatten.html">flatten</a>(order, ...)</p>
             <p>⇲ X.<a href="../docs/generated/nimble.core.data.Base.unflatten.html">unflatten</a>(dataDimensions, order, ...)</p>
             <p>&nbsp;&nbsp;X.<a href="../docs/generated/nimble.core.data.Base.groupByFeature.html">groupByFeature</a>(by, ...)</p>
+            <p>&nbsp;&nbsp;X.<a href="../docs/generated/nimble.core.data.Base.trainAndTestSets.html">trainAndTestSets</a>(testFraction, ...)</p>
             <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.append.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.append.html">features</a>].<span class="method">append</span>(toAppend)</p>
             <!-- added spaces to align divider with data modification section above -->
             <p>⇲ X.[<a class="axis" href="../docs/generated/nimble.core.data.Points.insert.html">points</a>/<a class="axis" href="../docs/generated/nimble.core.data.Features.insert.html">features</a>].<span class="method">insert</span>(insertBefore, toInsert, ...)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
@@ -643,6 +644,7 @@
             <p># Separate the data into groups based on the value in a single
               feature
             </p>
+            <p># Separate the data into a training set and a testing set</p>
             <p># Add additional points/features to the end of the object</p>
             <p># Add additional points/features at a given index</p>
             <p># Remove points/features from the object and place them in a new
