Correct spelling errors in cheatsheet

--- a/documentation/source/_static/cheatsheet.html
+++ b/documentation/source/_static/cheatsheet.html
@@ -158,7 +158,7 @@
             <p> X = <a href="../docs/generated/nimble.data.html">nimble.data</a>('Matrix', '/path/to/X.mtx')</p>
           </div>
           <div class="pad">
-            <p>From convenience,
+            <p>For convenience,
               <span class="inline"><a href="../docs/generated/nimble.ones.html">nimble.ones</a></span>,
               <span class="inline"><a href="../docs/generated/nimble.zeros.html">nimble.zeros</a></span>, and
               <span class="inline"><a href="../docs/generated/nimble.identity.html">nimble.identity</a></span>
@@ -714,7 +714,7 @@
             <p># Evaluate the accuracy of the predictions on the</p>
             <p>&nbsp;&nbsp;data used for training</p>
             <p># Evaluate the accuracy with varying arguments</p>
-            <p>&nbsp;&nbsp;Returns a <a href="../docs/generated/nimble.core.learn.KFoldCrossvalidator.html">KFoldCrossvalidator</a></p>
+            <p>&nbsp;&nbsp;Returns a <a href="../docs/generated/nimble.core.learn.KFoldCrossValidator.html">KFoldCrossValidator</a></p>
             <p># Transform the training (and optionally testing) data</p>
             <p>&nbsp;&nbsp;using the learnerName specified normalization</p>
             <p># Replace matching elements in points/features with</p>
@@ -725,7 +725,7 @@
           <h4>Learner Arguments</h4>
         </div>
         <div class="pad">
-          <p>To find the parameters and any default values for a learner.</p>
+          <p>Find the parameters and any default values for a learner.</p>
         </div>
         <div class="code">
           <div class="first-half">
@@ -836,7 +836,7 @@
             <p># The name of learner used for training</p>
             <p># The arguments used for training</p>
             <p># The randomSeed applied for training</p>
-            <p># <a href="../docs/generated/nimble.core.learn.KFoldCrossvalidator.html">KFoldCrossvalidator</a>
+            <p># <a href="../docs/generated/nimble.core.learn.KFoldCrossValidator.html">KFoldCrossValidator</a>
               object of the cross-validation results
             </p>
             <p># Apply the trained learner to new data</p>
