--- a/documentation/source/_templates/cheatsheet/cheatsheet-web.html
+++ b/documentation/source/_templates/cheatsheet/cheatsheet-web.html
@@ -3,34 +3,43 @@
 {% block css %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="_static/alabaster.css">
   <link rel="stylesheet" href="_static/cheatsheet.css">
-  {{super()}}
-{% endblock %}
-
-{% block image %}
-                <a href="_static/nimbleObject.png">
-                  <img src="_static/nimbleObject.png" class="img-fluid" id="data">
-                </a>
 {% endblock %}
 
 {% block jquery %}
       $("#tl").addClass("lower");
       $(".subhead.lower").css("margin-top", "0");
       $(".subhead.lower").css("margin-top", "0");
-      $(".content").slice(3).css("display", "none");
-      $(".icon").slice(1).text("+");
+      $(".content").slice(0, 3).show();
       $(".heading").click(function () {
         if ($(this).hasClass("active")) {
-          $(this).parent().find(".subhead.lower").css("margin-top", "0");
-          $(this).parent().find(".icon").text("+");
+          $(this).parent().find(".bi").removeClass("bi-caret-down-fill")
+          $(this).parent().find(".bi").addClass("bi-caret-right-fill")
           $(this).parent().find(".content").slideUp(400);
-          $(this).removeClass("active");
+          $(this).parent().find(".heading").removeClass("active");
         } else {
-          $(this).parent().find(".subhead.lower").css("margin-top", "6px");
-          $(this).parent().find(".icon").text("-");
+          $(this).parent().find(".bi").removeClass("bi-caret-right-fill")
+          $(this).parent().find(".bi").addClass("bi-caret-down-fill")
           $(this).parent().find(".content").slideDown(400);
-          $(this).addClass("active");
+          $(this).parent().find(".heading").addClass("active");
+        }
+        var section = $(this).closest(".section")
+        var subs = section.find(".subsection > .heading")
+        var active = section.find(".subsection > .heading.active")
+        var top = $(this).closest(".section").find(".heading").first();
+        if (subs.length && active.length > 0) {
+          top.find(".bi").removeClass("bi-caret-right-fill");
+          top.find(".bi").addClass("bi-caret-down-fill");
+          top.addClass("active");
+          subs.parent().find(".footnote").hide()
+          active.last().parent().find(".footnote").show()
+        } else if (subs.length && active.length === 0) {
+          top.find(".bi").removeClass("bi-caret-down-fill");
+          top.find(".bi").addClass("bi-caret-right-fill");
+          top.removeClass("active");
+          section.find(".footnote").hide()
         }
         return false;
       });
@@ -51,6 +60,7 @@
       font-size: 12px;
       font-family: "Courier New", monospace;
       margin: auto;
+      line-height: 1.5;
     }
 
     div.body .section {
@@ -58,8 +68,14 @@
     }
 
     div.body .content {
+      display: none;
+      padding: 0.5rem;
+    }
+
+    div.body .footnote {
+      display: none;
       padding-left: 0.5rem;
-      padding-right: 0.5rem;
+      padding-bottom: 0.5rem;
     }
 
     div.body .section-head {
@@ -70,35 +86,41 @@
       font-size: 14px;
     }
 
-    div.body .highlight {
+    div.body .highlighter {
       font-size: 12px;
     }
 
     div.body .code {
       overflow-x: auto;
       white-space: nowrap;
+      padding-left: 0.2rem;
+      line-height: 1.5;
     }
 
     div.body .code p {
       font-size: 11px;
     }
 
+    div.body .lower {
+      margin-top: 0.5rem;
+    }
+
     div.body .heading {
       display: inline-flex;
       width: 100%;
-      background-color: #004B6B;
-      color: white;
+      border: 1px solid lightgray;
     }
 
     div.body .heading h3 {
-      text-align: center;
-      width: 98%;
-      float: left;
+      text-align: left;
+      float: right;
     }
 
-    div.body .icon {
-      float: right;
+    div.body .bi {
+      padding-left: 0.2rem;
       padding-right: 0.5rem;
+      padding-top: 3px;
+      padding-bottom: 2px;
     }
 
     #title {
@@ -118,13 +140,22 @@
   </style>
 {% endblock %}
 
+{% block image %}
+                <a href="_static/nimbleObject.png">
+                  <img src="_static/nimbleObject.png" class="img-fluid" id="data">
+                </a>
+{% endblock %}
+
 {% block cheatsheet %}
   <div class="container-fluid">
     <div class="row">
-      <p style="font-size:1rem">
-        <a href="_static/cheatsheet.pdf" target="_blank">Download as PDF</a>
+      <p style="font-size:1.2rem;font-weight:bold">
+        <a href="_static/cheatsheet.pdf" target="_blank">
+          <i class="bi bi-file-pdf"></i>Download as PDF
+        </a>
       </p>
     </div>
+    <br>
     <div class="row">
       <div class="col-lg-auto">
         {% block title %}{{super()}}{% endblock %}
@@ -136,9 +167,9 @@
     <div class="row section">
       <div class="col-lg-12">
         {% block object_head %}
-        <div class="heading active">
+        <div class="heading rounded section-head active">
+          <i class="bi bi-caret-down-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
         <div class="row">
@@ -155,108 +186,267 @@
     <div class="row section">
       <div class="col-lg-12">
         {% block io_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        {% block io_data_head %}{{super()}}{% endblock %}
-        <div class="content">{% block io_data_content %}{{super()}}{% endblock %}</div>
-        {% block io_fetching_head %}{{super()}}{% endblock %}
-        <div class="content">{% block io_fetching_content %}{{super()}}{% endblock %}</div>
-        {% block io_saving_head %}{{super()}}{% endblock %}
-        <div class="content"> {% block io_saving_content %}{{super()}}{% endblock %}</div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block io_data_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block io_data_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block io_fetching_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block io_fetching_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block io_saving_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block io_saving_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
       </div>
     </div>
     <div class="row section">
       <div class="col-lg-12">
         {% block info_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        <div class="content">{% block info_content %}{{super()}}{% endblock %}</div>
+        <div class="content">
+          {% block info_content %}
+          {{super()}}
+          {% endblock %}
+        </div>
       </div>
     </div>
     <div class="row section">
       <div class="col-lg-12">
         {% block visualization_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        {% block visualization_printing_head %}{{super()}}{% endblock %}
-        <div class="content">{% block visualization_printing_content %}{{super()}}{% endblock %}</div>
-        {% block visualization_plotting_head %}{{super()}}{% endblock %}
-        <div class="content">{% block visualization_plotting_content %}{{super()}}{% endblock %}</div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block visualization_printing_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block visualization_printing_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block visualization_plotting_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block visualization_plotting_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
       </div>
     </div>
     <div class="row section">
       <div class="col-lg-12">
         {% block iteration_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        <div class="content">{% block iteration_content %}{{super()}}{% endblock %}</div>
+        <div class="content">
+          {% block iteration_content %}
+          {{super()}}
+          {% endblock %}
+        </div>
       </div>
     </div>
     <div class="row section">
       <div class="col-lg-12">
         {% block querying_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        {% block querying_data_head %}{{super()}}{% endblock %}
-        <div class="content">{% block querying_data_content %}{{super()}}{% endblock %}</div>
-        {% block querying_indexing_head %}{{super()}}{% endblock %}
-        <div class="content">{% block querying_indexing_content %}{{super()}}{% endblock %}</div>
-        {% block querying_querystrings_head %}{{super()}}{% endblock %}
-        <div class="content">{% block querying_querystrings_content %}{{super()}}{% endblock %}</div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block querying_data_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block querying_data_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block querying_indexing_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block querying_indexing_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block querying_querystrings_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block querying_querystrings_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
       </div>
     </div>
     <div class="row section">
       <div class="col-lg-12">
         {% block math_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        {% block math_operators_head %}{{super()}}{% endblock %}
-        <div class="content">{% block math_operators_content %}{{super()}}{% endblock %}</div>
-        {% block math_linalg_head %}{{super()}}{% endblock %}
-        <div class="content">{% block math_linalg_content %}{{super()}}{% endblock %}</div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block math_operators_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block math_operators_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block math_linalg_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block math_linalg_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
       </div>
     </div>
     <div class="row section">
       <div class="col-lg-12">
         {% block manipulation_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        {% block manipulation_copying_head %}{{super()}}{% endblock %}
-        <div class="content">{% block manipulation_copying_content %}{{super()}}{% endblock %}</div>
-        {% block manipulation_modification_head %}{{super()}}{% endblock %}
-        <div class="content">{% block manipulation_modification_content %}{{super()}}{% endblock %}</div>
-        {% block manipulation_structural_head %}{{super()}}{% endblock %}
-        <div class="content">{% block manipulation_structural_content %}{{super()}}{% endblock %}</div>
-        <div class="content center">{% block manipulation_footnote %}{{super()}}{% endblock %}</div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block manipulation_copying_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block manipulation_copying_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="footnote">
+            {{ self.manipulation_footnote() }}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block manipulation_modification_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block manipulation_modification_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="footnote">
+            {{ self.manipulation_footnote() }}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block manipulation_structural_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block manipulation_structural_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="footnote">
+            {{ self.manipulation_footnote() }}
+          </div>
+        </div>
       </div>
     </div>
     <div class="row section">
       <div class="col-lg-12">
         {% block submodules_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
         <div class="content">{% block submodules_content %}{{super()}}{% endblock %}</div>
@@ -265,19 +455,62 @@
     <div class="row section">
       <div class="col-lg-12">
         {% block ml_head %}
-        <div class="heading">
+        <div class="heading rounded section-head">
+          <i class="bi bi-caret-right-fill"></i>
           {{super()}}
-          <div class="icon">-</div>
         </div>
         {% endblock %}
-        {% block ml_interfaces_head %}{{super()}}{% endblock %}
-        <div class="content">{% block ml_interfaces_content %}{{super()}}{% endblock %}</div>
-        {% block ml_arguments_head %}{{super()}}{% endblock %}
-        <div class="content">{% block ml_arguments_content %}{{super()}}{% endblock %}</div>
-        {% block ml_trainedlearner_head %}{{super()}}{% endblock %}
-        <div class="content">{% block ml_trainedlearner_content %}{{super()}}{% endblock %}</div>
-        {% block ml_training_head %}{{super()}}{% endblock %}
-        <div class="content">{% block ml_training_content %}{{super()}}{% endblock %}</div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block ml_interfaces_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block ml_interfaces_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block ml_arguments_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block ml_arguments_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block ml_trainedlearner_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block ml_trainedlearner_content %}
+            {{super()}}{% endblock %}
+          </div>
+        </div>
+        <div class="subsection">
+          <div class="heading rounded subhead">
+            {% block ml_training_head %}
+            <i class="bi bi-caret-right-fill"></i>
+            {{super()}}
+            {% endblock %}
+          </div>
+          <div class="content">
+            {% block ml_training_content %}
+            {{super()}}
+            {% endblock %}
+          </div>
+        </div>
       </div>
     </div>
   </div>
