Add linking to front page; adjust .mtx to .csv in cheatsheet examples

--- a/documentation/source/_templates/cheatsheet/cheatsheet-template.html
+++ b/documentation/source/_templates/cheatsheet/cheatsheet-template.html
@@ -202,7 +202,7 @@
           </div>
           <div class="code">
             <p> X = <a href="docs/generated/nimble.data.html">nimble.data</a>([[1, 'a'], [2, 'b']])</p>
-            <p> X = <a href="docs/generated/nimble.data.html">nimble.data</a>('/path/to/X.mtx')</p>
+            <p> X = <a href="docs/generated/nimble.data.html">nimble.data</a>('/path/to/X.csv')</p>
           </div>
           <div class="pad">
             <p>For convenience,
